--- a/micro-gateway/src/main/resources/application.properties
+++ b/micro-gateway/src/main/resources/application.properties
@@ -11,6 +11,10 @@ zuul.routes.auth-service.path=/auth-api/**
 zuul.routes.auth-service.serviceId=auth-service
 zuul.routes.auth-service.stripPrefix=false
 
+zuul.routes.product-service.path=/auth-api/**
+zuul.routes.auth-service.serviceId=auth-service
+zuul.routes.auth-service.stripPrefix=false
+
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.preferIpAddress=true
 eureka.instance.lease-expiration-duration-in-seconds=1
