--- a/micro-sales/src/main/resources/application.yml
+++ b/micro-sales/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 server:
-  port: 9191
   servlet:
-    context-path: /auth-api
+    context-path: /sales-api
+  application:
+    name: sales-service
+  port: 8380
 
 spring:
   main:
@@ -26,17 +28,28 @@ spring:
   application:
     name: auth-service
 
-
+#eureka server url
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
   instance:
-    prefer-ip-address: true
+    preferIpAddress: true
+    lease-expiration-duration-in-seconds: 1
+    lease-renewal-interval-in-seconds: 2
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: -*
-        exclude: env,beans
+
+#oauth2 configuration
+security:
+  oauth2:
+    resource:
+      token-info-uri: http://localhost:9191/auth-api/oauth/check_token
+    client:
+      client-id: mobile
+      client-secret: pin
+
+
+
+
