--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
+        <version>2.4.9</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -38,5 +38,8 @@
         <module>micro-auth</module>
         <module>micro-eureka</module>
         <module>micro-gateway</module>
+        <module>micro-product</module>
+        <module>micro-sales</module>
+        <module>micro-delivery</module>
     </modules>
 </project>
