--- a/micro-auth/src/main/resources/application.yml
+++ b/micro-auth/src/main/resources/application.yml
@@ -29,14 +29,20 @@ spring:
 
 eureka:
   client:
+    fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
-
 management:
   endpoints:
     web:
       exposure:
         include: "*"
         exclude: env,beans
+
+security:
+  oauth2:
+    client:
+      client-id: mobile
+      client-secret: pin
